--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -131,8 +131,8 @@
       <h3>Account Identification:</h3>
 
       <p *ngFor="let account of program.data?.financial?.accounts; let i = index">
-        <ng-container class="field" [attr.id]="'program-account-identification-' + i" *ngIf="account.description">{{account.code}}-{{account.description}};</ng-container>
-        <ng-container class="field" [attr.id]="'program-account-identification-' + i" *ngIf="!account.description">{{account.code}}</ng-container>
+        <span class="field" [attr.id]="'program-account-identification-' + i" *ngIf="account.description">{{account.code}}-{{account.description}};</span>
+        <span class="field" [attr.id]="'program-account-identification-' + i" *ngIf="!account.description">{{account.code}}</span>
       </p>
     </section>
 
@@ -143,8 +143,8 @@
       <h3>Types of Assistance:</h3>
 
       <p *ngIf="dictionaries && dictionaries.assistance_type">
-        <ng-container *ngFor="let item of program.data?.assistanceTypes | filterMultiArrayObject:dictionaries.assistance_type:'element_id':true:'elements'; let isLast = last">
-          {{ item.displayValue }}{{isLast ? '' : ', '}}
+        <ng-container *ngFor="let item of program.data?.assistanceTypes | filterMultiArrayObject:dictionaries.assistance_type:'element_id':true:'elements'; let isLast = last; let i = index">
+          <span class="field" [attr.id]="'program-assistance-type-' + i">{{ item.displayValue }}{{isLast ? '' : ', '}}</span>
         </ng-container>
       </p>
 
@@ -154,15 +154,15 @@
       <p>
         <ng-container [ngSwitch]="program.data?.eligibility?.documentation?.flag">
           <ng-container *ngSwitchCase="'yes'">
-            {{program.data.eligibility.documentation.content}}
+            <span class="field" id="program-elegibility-documentation">{{program.data.eligibility.documentation.content}}</span>
             <ng-container [ngSwitch]="program.data.eligibility.documentation.questions?.OMBCircularA87?.flag">
-              <ng-container *ngSwitchCase="'yes'">
+              <span class="field" id="program-elegibility-question-a87" *ngSwitchCase="'yes'">
                 2 CFR 200, Subpart E - Cost Principles applies to this program.
-              </ng-container>
+              </span>
 
-              <ng-container *ngSwitchDefault>
+              <span class="field" id="program-elegibility-question-a87" *ngSwitchDefault>
                 This program is excluded from coverage under 2 CFR 200, Subpart E - Cost Principles.
-              </ng-container>
+              </span>
             </ng-container>
           </ng-container>
 
@@ -175,11 +175,13 @@
 
       <div class="designation" *ngIf="program.data && dictionaries && dictionaries.applicant_types">
         <h4>Designations</h4>
-        <ng-container *ngFor="let item of program.data?.eligibility?.applicant?.types | filterMultiArrayObject:dictionaries.applicant_types:'element_id':false:''; let isLast = last">{{ item.value }}{{isLast ? '' : ', '}}</ng-container>
+        <ng-container *ngFor="let item of program.data?.eligibility?.applicant?.types | filterMultiArrayObject:dictionaries.applicant_types:'element_id':false:''; let isLast = last; let i = index">
+          <span class="field" [attr.id]="'program-applicant-designation-' + i">{{ item.value }}{{isLast ? '' : ', '}}</span>
+        </ng-container>
       </div>
 
       <p>
-        {{program.data?.eligibility?.applicant?.additionalInfo?.content}}
+        <span class="field" id="program-applicant-eligibility">{{program.data?.eligibility?.applicant?.additionalInfo?.content}}</span>
       </p>
 
 
@@ -187,18 +189,22 @@
 
       <div class="designation" *ngIf="program.data && dictionaries && dictionaries.beneficiary_types">
         <h4>Designations</h4>
-        <ng-container *ngFor="let item of program.data?.eligibility?.beneficiary?.types | filterMultiArrayObject:dictionaries.beneficiary_types:'element_id':false:''; let isLast = last">{{ item.value }}{{isLast ? '' : ', '}}</ng-container>
+        <ng-container *ngFor="let item of program.data?.eligibility?.beneficiary?.types | filterMultiArrayObject:dictionaries.beneficiary_types:'element_id':false:''; let isLast = last; let i = index">
+          <span class="field" [attr.id]="'program-beneficiary-designation-' + i">{{ item.value }}{{isLast ? '' : ', '}}</span>
+        </ng-container>
       </div>
 
       <p>
-        {{program.data?.eligibility?.beneficiary?.additionalInfo?.content}}
+        <span class="field" id="program-beneficiary-eligibility">{{program.data?.eligibility?.beneficiary?.additionalInfo?.content}}</span>
       </p>
 
 
       <h3>Length and Time Phasing of Assistance:</h3>
       <p>
-        {{program.data?.assistance?.limitation?.content}}
-        <ng-container *ngIf="program.data?.assistance?.limitation?.awarded"> Method of awarding/releasing assistance: {{program.data.assistance?.limitation?.awarded}}</ng-container>
+        <span class="field" id="program-assistance-lengthtime">{{program.data?.assistance?.limitation?.content}}</span>
+        <span class="field" id="program-assistance-method" *ngIf="program.data?.assistance?.limitation?.awarded">
+          Method of awarding/releasing assistance: {{program.data.assistance?.limitation?.awarded}}
+        </span>
       </p>
 
 
@@ -206,14 +212,16 @@
 
       <div class="designation" *ngIf="program.data && dictionaries && dictionaries.assistance_usage_types">
         <h4>Designations</h4>
-        <ng-container *ngFor="let item of program.data?.eligibility?.applicant?.assistanceUsageTypes | filterMultiArrayObject:dictionaries.assistance_usage_types:'element_id':false:''; let isLast = last">{{ item.value }}{{isLast ? '' : ', '}}</ng-container>
+        <ng-container *ngFor="let item of program.data?.eligibility?.applicant?.assistanceUsageTypes | filterMultiArrayObject:dictionaries.assistance_usage_types:'element_id':false:''; let isLast = last; let i = index">
+          <span class="field" [attr.id]="'program-usage-designation-' + i">{{ item.value }}{{isLast ? '' : ', '}}</span>
+        </ng-container>
       </div>
 
       <p>
-        {{ program.data?.usage?.rules?.content }}
-        <ng-container *ngIf="program.data.usage?.restrictions?.flag=='yes'">{{ program.data.usage.restrictions.content }}</ng-container>
-        <ng-container *ngIf="program.data.usage?.discretionaryFund?.flag=='yes'">{{ program.data.usage.discretionaryFund.content }}</ng-container>
-        <ng-container *ngIf="program.data.usage?.loanTerms?.flag=='yes'">{{ program.data.usage.loanTerms.content }}</ng-container>
+        <span class="field" id="program-usage-rules">{{ program.data?.usage?.rules?.content }}</span>
+        <span class="field" id="program-usage-restrictions" *ngIf="program.data.usage?.restrictions?.flag=='yes'">{{ program.data.usage.restrictions.content }}</span>
+        <span class="field" id="program-usage-discretionary-fund" *ngIf="program.data.usage?.discretionaryFund?.flag=='yes'">{{ program.data.usage.discretionaryFund.content }}</span>
+        <span class="field" id="program-usage-loan-terms" *ngIf="program.data.usage?.loanTerms?.flag=='yes'">{{ program.data.usage.loanTerms.content }}</span>
       </p>
     </section>
 
