--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -537,21 +537,21 @@
 
       <address>
         <h3 class="m_B-5x">Regional or Local Office:</h3>
-        <ng-container *ngIf="program.data?.contacts?.local?.flag == 'appendix'"> See Regional Agency Offices. {{program.data.contacts['local']?.additionalInfo?.content}}</ng-container>
-        <ng-container *ngIf="program.data?.contacts?.local?.flag == 'none'"> None. {{program.data.contacts['local']?.additionalInfo?.content}}</ng-container>
+        <span class="field" id="program-contacts-local" *ngIf="program.data?.contacts?.local?.flag == 'appendix'"> See Regional Agency Offices. {{program.data.contacts['local']?.additionalInfo?.content}}</span>
+        <span class="field" id="program-contacts-local" *ngIf="program.data?.contacts?.local?.flag == 'none'"> None. {{program.data.contacts['local']?.additionalInfo?.content}}</span>
 
         <h3 class="m_B-5x">Headquarters Office:</h3>
 
-        <div class="content-block" *ngFor="let item of program.data?.contacts?.list">
-          <span>{{item.title}} {{item.fullName}} <br>{{item.address}}, <br> {{item.city}}, {{item.state}} {{item.zip}}</span>
-          <span><strong>Email:</strong> <a href="mailto:{{item.email}}">{{item.email}}</a></span>
-          <span><strong>Phone:</strong> {{item.phone}}</span>
-          <span *ngIf="item.fax"><strong>Fax:</strong> {{item.fax}}</span>
+        <div class="content-block" *ngFor="let item of program.data?.contacts?.list; let i = index">
+          <span class="field" [attr.id]="'program-contacts-address-' + i">{{item.title}} {{item.fullName}} <br>{{item.address}}, <br> {{item.city}}, {{item.state}} {{item.zip}}</span>
+          <span class="field" [attr.id]="'program-contacts-email-' + i"><strong>Email:</strong> <a href="mailto:{{item.email}}">{{item.email}}</a></span>
+          <span class="field" [attr.id]="'program-contacts-phone-' + i"><strong>Phone:</strong> {{item.phone}}</span>
+          <span class="field" [attr.id]="'program-contacts-fax-' + i" *ngIf="item.fax"><strong>Fax:</strong> {{item.fax}}</span>
         </div>
         <div class="m_T-5x">
           <strong>Website: </strong>
-          <ng-container *ngIf="!program.data?.website || program.data?.website == null ">No Data Available</ng-container>
-          <ng-container *ngIf="program.data?.website">{{program.data.website}}</ng-container>
+          <span class="field" id="program-contacts-website" *ngIf="!program.data?.website || program.data?.website == null ">No Data Available</span>
+          <span class="field" id="program-contacts-website" *ngIf="program.data?.website">{{program.data.website}}</span>
         </div>
       </address>
     </section>
@@ -559,16 +559,16 @@
     <!--History Section-->
     <section *ngIf="historicalIndex">
       <h2 id="history">History</h2><br>
-      <ng-container *ngFor="let item of historicalIndex">
+      <ng-container *ngFor="let item of historicalIndex; let i = index">
         <div id="historyItem" *ngIf="(!(item.actionType == 'publish' && item.index != 1))">
         <!--<p *ngIf="item.statusCode" style="text-align:left; margin-top:.7em">
           {{item.fiscalYear}} ({{item.statusCode}})
           <span class="historyDetails">{{item.actionType | historicalIndexLabel}}</span>
         </p>
         <p id="fiscalYear" *ngIf="!item.statusCode">-->
-          <p>
+          <p class="field" [attr.id]="'program-historical-' + i">
             {{item.fiscalYear}}
-            <span class="historyDetails" >{{item.actionType | historicalIndexLabel}}</span>
+            <span class="historyDetails" [attr.id]="'program-historical-details-' + i">{{item.actionType | historicalIndexLabel}}</span>
           </p>
           <p id="changeDescription">{{item.changeDescription}}</p>
         </div>
