--- a/src/app/organization/organization.style.css
+++ b/src/app/organization/organization.style.css
@@ -38,7 +38,7 @@ p{
   border-top: 1px solid rgba(204, 204, 204, 0.30);
 }
 .usa-zebra-list > li:nth-child(odd) {
-   background-color: rgba(241, 241, 241, 0.35);
+  background-color: rgba(241, 241, 241, 0.35);
 }
 .usa-zebra-list > li:hover{
   background-color: rgba(241, 241, 241, 1);
@@ -51,4 +51,9 @@ p{
 .usa-zebra-list li a{
   padding: 8px 14px;
   display: block;
+  text-decoration: none;
+}
+
+.usa-zebra-list li a:hover{
+  text-decoration: underline;
 }
