BROKEN all the changes necessary to get sass source maps to work

--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -1,5 +1,8 @@
+$image_path: '~uswds/dist/img';
+$fa-font-path: "~font-awesome/fonts";
+
 // Vendor main
-@import '~font-awesome/css/font-awesome';
+@import '~font-awesome/scss/font-awesome';
 
 // Internal variable should be declared before uswds variable to take higher precendence
 @import 'margin-padding';
