--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -7,25 +7,36 @@
     <!--Side Navigation-->
     <nav>
       <ul class="usa-sidenav-list">
-        <li><a href="{{ currentUrl }}#overview">Overview</a></li>
+        <li><a href="{{ currentUrl }}#gen-info">General Infornation</a></li>
+        <li><a href="{{ currentUrl }}#classification">Classification</a></li>
+        <li><a href="{{ currentUrl }}#syn-desc">Synopsis/Description</a></li>
+        <li><a href="{{ currentUrl }}#package">Packages</a></li>
+        <li><a href="{{ currentUrl }}#contact-info">Contact Information</a></li>
+        <li><a href="{{ currentUrl }}#history">History</a></li>
       </ul>
     </nav>
   </aside>
 
   <!--Main Content-->
-  <div class="usa-width-three-fourths" *ngIf="oNotice">
+  <div class="usa-width-three-fourths" *ngIf="opportunity">
     <h1>
-      {{oNotice.procurementTitle}}
+      {{opportunity.data?.title}}
     </h1>
-    <p>
-      <span *ngIf="oNotice.parentAgencyName != ''"><strong>Department: </strong>{{ oNotice.parentAgencyName }}<br></span>
-      <span *ngIf="oNotice.agencyName != ''"><strong>Agency: </strong>{{ oNotice.agencyName }}<br></span>
-      <span><strong>Solicitation Number: </strong>{{ oNotice.solicitationNumber }}<br></span>
+    <p class="content-block">
+      <span><strong>Solicitation Number: </strong>{{ opportunity.data?.solicitationNumber }}</span>
+      <span *ngIf='organization'>
+        <strong>
+          <ng-container [ngSwitch]='organization.type'>
+            <ng-container *ngSwitchCase="'DEPARTMENT'">Department</ng-container>
+            <ng-container *ngSwitchCase="'AGENCY'">Agency</ng-container>
+            <ng-container *ngSwitchCase="'OFFICE'">Office</ng-container>
+          </ng-container>: 
+        </strong>
+        {{ organization.name }}
+      </span>
+      <span><strong>Locations: </strong> {{ opportunityLocation }}</span>
     </p>
-    <h2 id="overview">Overview</h2>
-    <section>
-      <h3>Description</h3>
-      <p id="procurementDesc" [innerHTML]="oNotice.procurementDescription"></p>
-    </section>
   </div>
+  
+  
 </div>
