Theming: Fixing divider spacing

--- a/src/app/organization/organization.page.html
+++ b/src/app/organization/organization.page.html
@@ -5,7 +5,7 @@
     
     <section>
       Code {{organization.code}} 
-      <span class="divider">|</span> 
+      <span class="divider">&nbsp;|&nbsp;</span> 
       
       <span class="inactive" *ngIf="isModActive() == false">
         <i class="fa fa-circle-thin" aria-hidden="true"></i> 
